--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "eslint": "eslint --ignore-path .gitignore .",
-    "test": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000"
+    "test": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000",
+    "test-folders": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Folders Api endpoint\"",
+    "test-lists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Lists Api endpoint\"",
+    "test-spaces": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Spaces Api endpoint\""
   },
   "keywords": [],
   "author": "",
