--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000",
     "test-folders": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Folders Api endpoint\"",
     "test-lists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Lists Api endpoint\"",
-    "test-spaces": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Spaces Api endpoint\""
+    "test-spaces": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Spaces Api endpoint\"",
+    "test-tasks": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Tasks Api endpoint\""
   },
   "keywords": [],
   "author": "",
