--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-folders": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Folders Api endpoint\"",
     "test-lists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Lists Api endpoint\"",
     "test-spaces": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Spaces Api endpoint\"",
-    "test-tasks": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Tasks Api endpoint\""
+    "test-tasks": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Tasks Api endpoint\"",
+    "test-taskTemplates": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Task Templates Api endpoint\""
   },
   "keywords": [],
   "author": "",
