CLI-64 Refactored hooks and sorted test execution scripts

--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "eslint": "eslint --ignore-path .gitignore .",
-    "test": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000",
-    "test-folders": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Folders Api endpoint\"",
-    "test-lists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Lists Api endpoint\"",
-    "test-spaces": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Spaces Api endpoint\"",
-    "test-tasks": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Tasks Api endpoint\"",
-    "test-views": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Views Api endpoint\"",
-    "test-checklists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Checklists Api endpoint\"",
-    "test-comments": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Comments Api endpoint\"",
-    "test-tags": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Tags Api endpoint\"",
-    "test-teams": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Teams Api endpoint\"",
+    "test": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js",
+    "test-checklists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Checklists Api endpoint\"",
+    "test-comments": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Comments Api endpoint\"",
+    "test-folders": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Folders Api endpoint\"",
     "test-goals": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Goals Api endpoint\"",
-    "test-members": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --fgrep \"Members Api endpoint\""
+    "test-lists": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Lists Api endpoint\"",
+    "test-members": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Members Api endpoint\"",
+    "test-spaces": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Spaces Api endpoint\"",
+    "test-tags": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Tags Api endpoint\"",
+    "test-tasks": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Tasks Api endpoint\"",
+    "test-teams": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Teams Api endpoint\"",
+    "test-views": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Views Api endpoint\""
   },
   "keywords": [],
   "author": "",
