--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsdoc": "^3.6.3",
     "superagent": "^5.2.1"
   },
   "devDependencies": {
@@ -33,7 +32,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jsdoc": "^3.6.3",
     "mocha": "^7.0.0",
-    "mochawesome": "^4.1.0"
+    "mocha-allure-reporter": "^1.4.0"
   }
 }
