--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-tasks": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Tasks Api endpoint\"",
     "test-teams": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Teams Api endpoint\"",
     "test-views": "./node_modules/.bin/mocha tests/*.spec.js --debug-brk --timeout 10000 --file ./tests/setup.js --fgrep \"Views Api endpoint\"",
-    "doc": "jsdoc ./README.md ./tests/setup.js ./Requesters/SuperAgent.js ./ClickUpApiV2/Data/helper.js ./ClickUpApiV2/ClickUpApi.js ./ClickUpApiV2/Endpoints/CheckLists.js ./ClickUpApiV2/Endpoints/Comments.js ./ClickUpApiV2/Endpoints/Folders.js ./ClickUpApiV2/Endpoints/Goals.js ./ClickUpApiV2/Endpoints/Lists.js ./ClickUpApiV2/Endpoints/Members.js ./ClickUpApiV2/Endpoints/Spaces.js ./ClickUpApiV2/Endpoints/Tags.js ./ClickUpApiV2/Endpoints/Tasks.js ./ClickUpApiV2/Endpoints/TaskTemplates.js ./ClickUpApiV2/Endpoints/Teams.js ./ClickUpApiV2/Endpoints/Views.js -d docs"
+    "doc": "jsdoc ./README.md ./tests/setup.js ./requesters/super-agent.js ./clickup-api-v2/data/helper.js ./clickup-api-v2/clickup-api.js ./clickup-api-v2/endpoints/checklists.js ./clickup-api-v2/endpoints/comments.js ./clickup-api-v2/endpoints/folders.js ./clickup-api-v2/endpoints/goals.js ./clickup-api-v2/endpoints/lists.js ./clickup-api-v2/endpoints/members.js ./clickup-api-v2/endpoints/spaces.js ./clickup-api-v2/endpoints/tags.js ./clickup-api-v2/endpoints/tasks.js ./clickup-api-v2/endpoints/task-templates.js ./clickup-api-v2/endpoints/teams.js ./clickup-api-v2/endpoints/views.js -d docs"
   },
   "keywords": [],
   "author": "",
